--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "phpmailer/phpmailer": "*",
+        "phpmailer/phpmailer": "^6.9",
         "phpoffice/phpspreadsheet": "^3.3"
     },
     "require-dev": {
