--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "phpmailer/phpmailer": "^6.9",
-        "phpoffice/phpspreadsheet": "^3.3"
+        "phpoffice/phpspreadsheet": "^3.3",
+        "picqer/php-barcode-generator": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
